--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="./Dart2004/style.css">
     </head>
     <body class="vcenter">
         <input type="checkbox" id="mode" onchange="setDesign()"> Dark theme
@@ -59,6 +59,6 @@
                 <h3>You are logged out automatically</h3>
             </div>
         </div>
-        <script src="script.js"></script>
+        <script src="./Dart2004/script.js"></script>
     </body>
 </html>
