--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="./Dart2004/style.css">
+        <link rel="stylesheet" href="./style.css">
+        <link rel="shortcut icon" href="https://dart2004.github.io/Discordface.svg.png">
+        <meta name="og:title" content="Dart2.0">
+        <meta name="og:description" content="A full stack Web-developer">
+        <meta name="og:image" content="https://dart2004.github.io/Discordface.svg.png">
     </head>
     <body class="vcenter">
         <input type="checkbox" id="mode" onchange="setDesign()"> Dark theme
@@ -59,6 +63,6 @@
                 <h3>You are logged out automatically</h3>
             </div>
         </div>
-        <script src="./Dart2004/script.js"></script>
+        <script src="./script.js"></script>
     </body>
 </html>
