--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="og:title" content="Dart2.0">
         <meta name="og:description" content="A full stack Web-developer">
         <meta name="og:image" content="https://dart2004.github.io/Discordface.svg.png">
+        <title>Dart2.0</title>
     </head>
     <body class="vcenter">
         <input type="checkbox" id="mode" onchange="setDesign()"> Dark theme
